# chesstree

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  chesstree-schema-changelog.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test-publish.yml
chesstree/: cli.py  d3html_exporter.py  d3tree_exporter.py  dot_exporter.py  dothtml_exporter.py  json_exporter.py  json_parser.py  utils.py
chesstree/templates/: d3html_default.html  dothtml_default.html
docs/: schema.md
plans/: d3html-interactive-tree.md
tests/: test_cli.py  test_d3html_exporter.py  test_d3tree_exporter.py  test_dot_exporter.py  test_dothtml_exporter.py  test_functional.py  test_json_exporter.py  test_utils.py  validate_schema.py
tests/sample_pgns/: caro-kann-tartakower.pgn  gergeshain-vs-lisperer.pgn  hillbilly_v3.pgn  kramnik-karpov-1997-annotated.pgn  kramnik-korchnoi-1996-annotated.pgn  lichess_study_caro-kann-exchange-sample3.pgn  lisperer_vs_verenitach.pgn
