[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chesstree"
version = "2026.1.dev0"
description = "Visualise PGN chess games as interactive trees; convert PGN to JSON, EDN, GraphViz DOT and HTML"
authors = [{ name = "Benedek Fazekas" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
keywords = [
    "chess", "pgn", "visualization", "game-tree",
    "graphviz", "dot", "d3", "json", "converter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "chess >= 1.11.2",
    "typing_extensions >= 4.0; python_version < '3.12'",
]

[project.urls]
Homepage = "https://github.com/benedekfazekas/chesstree"
Repository = "https://github.com/benedekfazekas/chesstree"
Issues = "https://github.com/benedekfazekas/chesstree/issues"
Changelog = "https://github.com/benedekfazekas/chesstree/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-cov",
]

[tool.setuptools.packages]
find = {where = ["."]}

[tool.setuptools.package-data]
"chesstree.templates" = ["*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
chesstree = "chesstree.cli:cli"
